--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -3,4 +3,4 @@ FROM python:alpine
 WORKDIR /code
 RUN pip install --upgrade pip
 COPY . /code/
-CMD ["python", "python.py"]
+CMD ["python", "main.py"]
