--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -64,9 +64,10 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: docker compose
-        run: |
-          scp  -o "StrictHostKeyChecking no" docker-compose.yml "whywelive-nketemplate-tjee71v9dl9#vJO_uXdpA_W93EkCckS4A91kFZBqhbEh@whywelive-nketemplate-tjee71v9dl9.ssh.ws-eu107.gitpod.io" "cd /workspace/nke-template && docker compose pull && docker-compose up -d":/workspace/nke-template
+      - name: отправка
+        run: scp  -o "StrictHostKeyChecking no" docker-compose.yml "whywelive-nketemplate-tjee71v9dl9#vJO_uXdpA_W93EkCckS4A91kFZBqhbEh@whywelive-nketemplate-tjee71v9dl9.ssh.ws-eu107.gitpod.io":/workspace/nke-template
+      - name: запуск
+        run: ssh  -o "StrictHostKeyChecking no" "whywelive-nketemplate-tjee71v9dl9#vJO_uXdpA_W93EkCckS4A91kFZBqhbEh@whywelive-nketemplate-tjee71v9dl9.ssh.ws-eu107.gitpod.io" "cd /workspace/nke-template && docker compose pull && docker-compose up -d"
         #TELEGA OLEGA
       - name: send telegram message on push
         uses: appleboy/telegram-action@master
